docs/_static/config_examples/f5-ipam-ctlr-credentials.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: f5-ipam-ctlr
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: f5-ipam-ctlr
      labels:
        app: f5-ipam-ctlr
    spec:
      serviceAccountName: ipam-ctlr
      containers:
        - name: f5-ipam-ctlr
          imagePullPolicy: Always
          image: "docker-registry/namespace/f5-ipam-ctlr:latest"
          command: ["/app/bin/f5-ipam-ctlr"]
          args:
            - "--orchestration=kubernetes"
            - "--ip-manager=infoblox"
            - "--infoblox-grid-host=1.2.3.4"
            - "--infoblox-wapi-version=2.7"
            - "--credentials-directory=/tmp/creds"
